--- a/templates/index.html
+++ b/templates/index.html
@@ -347,7 +347,7 @@
         };
 
         try {
-            const response = await fetch("http://127.0.0.1:5000/predict", {
+            const response = await fetch("https://salary-prediction-model-dvhx.onrender.com", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify(data)
