--- a/templates/index.html
+++ b/templates/index.html
@@ -347,7 +347,7 @@
         };
 
         try {
-            const response = await fetch("https://salary-prediction-model-dvhx.onrender.com", {
+            const response = await fetch("https://salary-prediction-model-2ob7.onrender.com", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify(data)
@@ -442,7 +442,7 @@
     // model accuracy 
     async function showModelAccuracy() {
         try {
-            const response = await fetch("http://127.0.0.1:5000/accuracy");
+            const response = await fetch("https://salary-prediction-model-2ob7.onrender.com");
             const data = await response.json();
             document.querySelector("#accuracyModal .text-sm.font-medium.text-gray-700:last-child").textContent = data.accuracy + "%";
             document.querySelector("#accuracyModal .bg-green-600").style.width = data.accuracy + "%";
